scaling font size in  header

--- a/index.html
+++ b/index.html
@@ -355,8 +355,8 @@
                     <div class="container-overlay">
                         <img src="./assets/img/2e72f5dbca313a95a614ac5562e7e1c7.jpeg" class="card-img" alt="..." />
                         <div class="content-overlay bg-odd">
-                            <div class="d-flex justify-content-center align-items-center h-100 text-center">
-                                <h1 data-bs-toggle="popover" data-bs-title="Tentang Perkindo" data-bs-content-id="popover-tentang-perkindo-content" class="text-uppercase">tentang perkindo</h1>
+                            <div class="header-popover-container d-flex justify-content-center align-items-center h-100 text-center">
+                                <h1 class="text-uppercase fw-bold" data-bs-toggle="popover" data-bs-title="Tentang Perkindo" data-bs-content-id="popover-tentang-perkindo-content">tentang perkindo</h1>
                             </div>
                         </div>
                     </div>
@@ -365,8 +365,8 @@
                     <div class="container-overlay">
                         <img src="./assets/img/b5a3817cd455efdf10315bb7563ad5b4.png" class="card-img" alt="..." />
                         <div class="content-overlay bg-even">
-                            <div class="d-flex justify-content-center align-items-center h-100 text-center">
-                                <h1 class="text-uppercase" data-bs-toggle="popover" data-bs-title="Keanggotaan" data-bs-content-id="popover-keanggotaan-content">keanggotaan</h1>
+                            <div class="header-popover-container d-flex justify-content-center align-items-center h-100 text-center">
+                                <h1 class="text-uppercase fw-bold" data-bs-toggle="popover" data-bs-title="Keanggotaan" data-bs-content-id="popover-keanggotaan-content">keanggotaan</h1>
                             </div>
                         </div>
                     </div>
@@ -375,8 +375,8 @@
                     <div class="container-overlay">
                         <img src="./assets/img/31f59146442a1f52aee41f4e78bfa7a4.png" class="card-img" alt="..." />
                         <div class="content-overlay bg-odd">
-                            <div class="d-flex justify-content-center align-items-center h-100 text-center">
-                                <h1 class="text-uppercase" data-bs-toggle="popover" data-bs-title="Sertifikasi" data-bs-content-id="popover-sertifikasi-content">sertifikasi</h1>
+                            <div class="header-popover-container d-flex justify-content-center align-items-center h-100 text-center">
+                                <h1 class="text-uppercase fw-bold" data-bs-toggle="popover" data-bs-title="Sertifikasi" data-bs-content-id="popover-sertifikasi-content">sertifikasi</h1>
                             </div>
                         </div>
                     </div>
@@ -385,8 +385,8 @@
                     <div class="container-overlay">
                         <img src="./assets/img/907f8cd2fa67826b29fef8d288a94a1a.jpeg" class="card-img" alt="..." />
                         <div class="content-overlay bg-even">
-                            <div class="d-flex justify-content-center align-items-center h-100 text-center">
-                                <h1 class="text-uppercase" data-bs-toggle="popover" data-bs-title="Bisnis" data-bs-content-id="popover-bisnis-content">bisnis</h1>
+                            <div class="header-popover-container d-flex justify-content-center align-items-center h-100 text-center">
+                                <h1 class="text-uppercase fw-bold" data-bs-toggle="popover" data-bs-title="Bisnis" data-bs-content-id="popover-bisnis-content">bisnis</h1>
                             </div>
                         </div>
                     </div>
