scaling font size for slider anggota

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                             <div class="card-body p-5">
                                 <div class="row">
                                     <div class="col-lg-7">
-                                        <div class="d-flex flex-column justify-content-center align-items-center h-100 px-5 mx-lg-5 mb-3 mb-lg-0">
+                                        <div class="d-flex flex-column justify-content-center align-items-center h-100 px-2 px-lg-5 mx-lg-5 mb-3 mb-lg-0">
                                             <h1 class="text-uppercase card-slider-title">perkindo</h1>
                                             <h2 class="text-uppercase card-slider-subtitle">unggul berdaya saing</h2>
                                             <div class="horizontal-line my-3 mb-4"></div>
@@ -424,8 +424,8 @@
                                     <div class="col-lg-5">
                                         <div class="d-flex flex-column justify-content-center align-items-center h-100">
                                             <img class="shadow rounded-4" src="./assets/img/0e7079b0650f7346d4f2a46351d9c7c9.jpeg" style="width: 80%; height: auto" />
-                                            <span class="fw-bold mt-2">IR. NUNUS NUGROHO AP, M.M, I.P.U.</span>
-                                            <span class="fw-bold">(Ketua Umum PERKINDO 2022 - 2027)</span>
+                                            <span class="fw-bold card-slider-image-subtitle mt-2">IR. NUNUS NUGROHO AP, M.M, I.P.U.</span>
+                                            <span class="fw-bold card-slider-image-subtitle">(Ketua Umum PERKINDO 2022 - 2027)</span>
                                         </div>
                                     </div>
                                 </div>
@@ -450,8 +450,8 @@
                                     <div class="col-lg-5">
                                         <div class="d-flex flex-column justify-content-center align-items-center h-100">
                                             <img class="shadow rounded-4" src="./assets/img/0e7079b0650f7346d4f2a46351d9c7c9.jpeg" style="width: 80%; height: auto" />
-                                            <span class="fw-bold mt-2">IR. NUNUS NUGROHO AP, M.M, I.P.U.</span>
-                                            <span class="fw-bold">(Ketua Umum PERKINDO 2022 - 2027)</span>
+                                            <span class="fw-bold card-slider-image-subtitle mt-2">IR. NUNUS NUGROHO AP, M.M, I.P.U.</span>
+                                            <span class="fw-bold card-slider-image-subtitle">(Ketua Umum PERKINDO 2022 - 2027)</span>
                                         </div>
                                     </div>
                                 </div>
@@ -476,8 +476,8 @@
                                     <div class="col-lg-5">
                                         <div class="d-flex flex-column justify-content-center align-items-center h-100">
                                             <img class="shadow rounded-4" src="./assets/img/0e7079b0650f7346d4f2a46351d9c7c9.jpeg" style="width: 80%; height: auto" />
-                                            <span class="fw-bold mt-2">IR. NUNUS NUGROHO AP, M.M, I.P.U.</span>
-                                            <span class="fw-bold">(Ketua Umum PERKINDO 2022 - 2027)</span>
+                                            <span class="fw-bold card-slider-image-subtitle mt-2">IR. NUNUS NUGROHO AP, M.M, I.P.U.</span>
+                                            <span class="fw-bold card-slider-image-subtitle">(Ketua Umum PERKINDO 2022 - 2027)</span>
                                         </div>
                                     </div>
                                 </div>
@@ -502,8 +502,8 @@
                                     <div class="col-lg-5">
                                         <div class="d-flex flex-column justify-content-center align-items-center h-100">
                                             <img class="shadow rounded-4" src="./assets/img/0e7079b0650f7346d4f2a46351d9c7c9.jpeg" style="width: 80%; height: auto" />
-                                            <span class="fw-bold mt-2">IR. NUNUS NUGROHO AP, M.M, I.P.U.</span>
-                                            <span class="fw-bold">(Ketua Umum PERKINDO 2022 - 2027)</span>
+                                            <span class="fw-bold card-slider-image-subtitle mt-2">IR. NUNUS NUGROHO AP, M.M, I.P.U.</span>
+                                            <span class="fw-bold card-slider-image-subtitle">(Ketua Umum PERKINDO 2022 - 2027)</span>
                                         </div>
                                     </div>
                                 </div>
@@ -528,8 +528,8 @@
                                     <div class="col-lg-5">
                                         <div class="d-flex flex-column justify-content-center align-items-center h-100">
                                             <img class="shadow rounded-4" src="./assets/img/0e7079b0650f7346d4f2a46351d9c7c9.jpeg" style="width: 80%; height: auto" />
-                                            <span class="fw-bold mt-2">IR. NUNUS NUGROHO AP, M.M, I.P.U.</span>
-                                            <span class="fw-bold">(Ketua Umum PERKINDO 2022 - 2027)</span>
+                                            <span class="fw-bold card-slider-image-subtitle mt-2">IR. NUNUS NUGROHO AP, M.M, I.P.U.</span>
+                                            <span class="fw-bold card-slider-image-subtitle">(Ketua Umum PERKINDO 2022 - 2027)</span>
                                         </div>
                                     </div>
                                 </div>
