scaling font size for ptmk
*Peulang Tender & Mitra Kerja

--- a/index.html
+++ b/index.html
@@ -674,14 +674,14 @@
         <div class="container-fluid mb-3">
             <div class="row">
                 <div class="col-12 col-lg-6 d-flex flex-column p-0 mt-3 mt-lg-0">
-                    <span class="text-uppercase fs-3 fw-bold me-auto horizontal-line-2 m-2">peluang tender</span>
+                    <span class="text-uppercase fw-bold me-auto horizontal-line-2 m-2 ptmk-title">peluang tender</span>
                     <div class="row w-100 m-0">
                         <div class="col-6 col-lg-3 p-0">
                             <div class="container-overlay">
                                 <img src="./assets/img/kementrian.png" class="card-img" alt="..." />
                                 <div class="content-overlay bg-even">
                                     <div class="d-flex justify-content-center align-items-center h-100 text-center">
-                                        <span class="text-uppercase fs-5 fw-bold text-light display-6">kementrian</span>
+                                        <span class="text-uppercase fw-bold text-light ptmk-entry">kementrian</span>
                                     </div>
                                 </div>
                             </div>
@@ -691,7 +691,7 @@
                                 <img src="./assets/img/badan lembaga.png" class="card-img" alt="..." />
                                 <div class="content-overlay bg-odd">
                                     <div class="d-flex justify-content-center align-items-center h-100 text-center">
-                                        <span class="text-uppercase fs-5 fw-bold text-light display-6">badan lembaga</span>
+                                        <span class="text-uppercase fw-bold text-light ptmk-entry">badan lembaga</span>
                                     </div>
                                 </div>
                             </div>
@@ -701,7 +701,7 @@
                                 <img src="./assets/img/bumn.png" class="card-img" alt="..." />
                                 <div class="content-overlay bg-even">
                                     <div class="d-flex justify-content-center align-items-center h-100 text-center">
-                                        <span class="text-uppercase fs-5 fw-bold text-light display-6">bumn</span>
+                                        <span class="text-uppercase fw-bold text-light ptmk-entry">bumn</span>
                                     </div>
                                 </div>
                             </div>
@@ -711,7 +711,7 @@
                                 <img src="./assets/img/lembaga internasional.png" class="card-img" alt="..." />
                                 <div class="content-overlay bg-odd">
                                     <div class="d-flex justify-content-center align-items-center h-100 text-center">
-                                        <span class="text-uppercase fs-5 fw-bold text-light display-6">lembaga internasional / donor fund</span>
+                                        <span class="text-uppercase fw-bold text-light ptmk-entry">lembaga internasional / donor fund</span>
                                     </div>
                                 </div>
                             </div>
@@ -719,14 +719,14 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-6 d-flex flex-column p-0 mt-3 mt-lg-0">
-                    <div class="text-uppercase fs-3 fw-bold me-auto horizontal-line-2 m-2">mitra kerja</div>
+                    <div class="text-uppercase fw-bold me-auto horizontal-line-2 m-2 ptmk-title">mitra kerja</div>
                     <div class="row w-100 m-0">
                         <div class="col-6 col-lg-3 p-0">
                             <div class="container-overlay">
                                 <img src="./assets/img/asosiasi.png" class="card-img" alt="..." />
                                 <div class="content-overlay bg-even">
                                     <div class="d-flex justify-content-center align-items-center h-100 text-center">
-                                        <span class="text-uppercase fs-5 fw-bold text-light display-6">asosiasi bu / profesi</span>
+                                        <span class="text-uppercase fw-bold text-light ptmk-entry">asosiasi bu / profesi</span>
                                     </div>
                                 </div>
                             </div>
@@ -736,7 +736,7 @@
                                 <img src="./assets/img/pergruan.png" class="card-img" alt="..." />
                                 <div class="content-overlay bg-odd">
                                     <div class="d-flex justify-content-center align-items-center h-100 text-center">
-                                        <span class="text-uppercase fs-5 fw-bold text-light display-6">perguruan tinggi</span>
+                                        <span class="text-uppercase fw-bold text-light ptmk-entry">perguruan tinggi</span>
                                     </div>
                                 </div>
                             </div>
@@ -746,7 +746,7 @@
                                 <img src="./assets/img/peraturan.png" class="card-img" alt="..." />
                                 <div class="content-overlay bg-even">
                                     <div class="d-flex justify-content-center align-items-center h-100 text-center">
-                                        <span class="text-uppercase fs-5 fw-bold text-light display-6">peraturan</span>
+                                        <span class="text-uppercase fw-bold text-light ptmk-entry">peraturan</span>
                                     </div>
                                 </div>
                             </div>
@@ -756,7 +756,7 @@
                                 <img src="./assets/img/refrensi.png" class="card-img" alt="..." />
                                 <div class="content-overlay bg-odd">
                                     <div class="d-flex justify-content-center align-items-center h-100 text-center">
-                                        <span class="text-uppercase fs-5 fw-bold text-light display-6">refrensi</span>
+                                        <span class="text-uppercase fw-bold text-light ptmk-entry">refrensi</span>
                                     </div>
                                 </div>
                             </div>
