--- a/index.html
+++ b/index.html
@@ -145,6 +145,45 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col p-0 container-overlay">
+                  <div class="content-overlay" style="top: initial">
+                      <div class="row" style="height: 12vh">
+                          <div class="col-lg-7 px-0">
+                              <div class="d-flex flex-column justify-content-center align-items-center p-1 h-100" style="background: rgba(102, 182, 83, 0.5)">
+                                  <div class="text-light">Iklan <span class="fw-bold">Badan Usaha</span></div>
+                                  <!-- <div>
+                                  </div> -->
+                                  <div class="custom-slider">
+                                      <div class="custom-slide-track2">
+                                          <div class="custom-slide"><img class="img-fluid" src="./assets/img/1ee170f48e7d535be7585e72a1c8f740.jpeg" style="max-height: 44px" /></div>
+                                          <div class="custom-slide"><img class="img-fluid" src="./assets/img/6adbd3ee6cd9a021567a40a79e95d35e.jpeg" style="max-height: 44px" /></div>
+                                          <div class="custom-slide"><img class="img-fluid" src="./assets/img/0be08d5fa05cd875b249d7e4de4c8995.jpeg" style="max-height: 44px" /></div>
+                                          <div class="custom-slide"><img class="img-fluid" src="./assets/img/26341f3dab80f6d0221807772a22e1c5.jpeg" style="max-height: 44px" /></div>
+                                          <div class="custom-slide"><img class="img-fluid" src="./assets/img/1ee170f48e7d535be7585e72a1c8f740.jpeg" style="max-height: 44px" /></div>
+
+                                          <div class="custom-slide"><img class="img-fluid" src="./assets/img/1ee170f48e7d535be7585e72a1c8f740.jpeg" style="max-height: 44px" /></div>
+                                          <div class="custom-slide"><img class="img-fluid" src="./assets/img/6adbd3ee6cd9a021567a40a79e95d35e.jpeg" style="max-height: 44px" /></div>
+                                          <div class="custom-slide"><img class="img-fluid" src="./assets/img/0be08d5fa05cd875b249d7e4de4c8995.jpeg" style="max-height: 44px" /></div>
+                                          <div class="custom-slide"><img class="img-fluid" src="./assets/img/26341f3dab80f6d0221807772a22e1c5.jpeg" style="max-height: 44px" /></div>
+                                          <div class="custom-slide"><img class="img-fluid" src="./assets/img/1ee170f48e7d535be7585e72a1c8f740.jpeg" style="max-height: 44px" /></div>
+
+                                          <div class="custom-slide"><img class="img-fluid" src="./assets/img/1ee170f48e7d535be7585e72a1c8f740.jpeg" style="max-height: 44px" /></div>
+                                          <div class="custom-slide"><img class="img-fluid" src="./assets/img/6adbd3ee6cd9a021567a40a79e95d35e.jpeg" style="max-height: 44px" /></div>
+                                          <div class="custom-slide"><img class="img-fluid" src="./assets/img/0be08d5fa05cd875b249d7e4de4c8995.jpeg" style="max-height: 44px" /></div>
+                                          <div class="custom-slide"><img class="img-fluid" src="./assets/img/26341f3dab80f6d0221807772a22e1c5.jpeg" style="max-height: 44px" /></div>
+                                          <div class="custom-slide"><img class="img-fluid" src="./assets/img/1ee170f48e7d535be7585e72a1c8f740.jpeg" style="max-height: 44px" /></div>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="col-lg-5 px-0">
+                              <div class="d-flex align-items-end h-100">
+                                  <div class="fs-3 text-center w-100" style="background: rgba(102, 182, 83, 0.5)">
+                                      <a href="#" class="text-light text-decoration-none"> <span class="fw-bold">SIAP (</span>SISTEM INFORMASI ANGGOTA PERKINDO<span class="fw-bold">)</span> </a>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
                     <div class="row row-cols-1 row-cols-lg-3 m-0">
                         <div class="col p-0">
                             <div id="slider1" class="carousel slide p-0" data-bs-ride="true">
